fix thebility css - 4k + visibility. no more support for ie for now

--- a/sys/styles/sass/admin/_login.scss
+++ b/sys/styles/sass/admin/_login.scss
@@ -18,22 +18,6 @@
     img {
         width: 30vw;
     }
-    form {
-        display: flex;
-        justify-content: center;
-        flex-direction: column;
-        input[type="submit"] {
-            background: $c_D_interP2;
-            color: $c_D_interM1;
-            padding: 1vh;
-            @include font(1, 400);
-        }
-    }
-    .loginMessageText {
-        position: fixed;
-        bottom: 5vh;
-        text-transform: uppercase;
-    }
 }
 
 @include mob(true) {
